# blazing-darkness

./: .gitignore  CMakeLists.txt  README.md
docs/: mechanics_en.md  mechanics_ua.md
src/: Game.cpp  Game.h
src/common/: Logger.h  Utils.cpp
src/entities/: Character.cpp  Character.h  Player.cpp  Player.h
src/items/: HealthPotion.cpp  Item.h
src/world/: WorldMap.cpp
